# Battleships

./: CMakeLists.txt
Battleships/: Battleships.cpp  Battleships.h  CMakeLists.txt  Player.cpp  Player.h
Battleships/entities/: Board.cpp  Board.h  Coord.h  Field.h  Ship.cpp  Ship.h
Battleships/players/: ConsolePlayer.h
